[gd_scene load_steps=8 format=3 uid="uid://cr5nto0v1cvtd"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_gmbs1"]
[ext_resource type="Texture2D" uid="uid://bfd451a8jrajb" path="res://art/CastorWalking3.png" id="2_bx6sm"]
[ext_resource type="Texture2D" uid="uid://dhurkqw4wwk7c" path="res://art/BananaPeel.png" id="3_r1ocp"]
[ext_resource type="AudioStream" uid="uid://bwjyvfbesq7tx" path="res://art/Squish Sound Effect.wav" id="4_u32a3"]

[sub_resource type="SpriteFrames" id="SpriteFrames_rjb5n"]
animations = [{
"frames": [],
"loop": true,
"name": &"shovel",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_bx6sm")
}],
"loop": true,
"name": &"walk",
"speed": 0.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tax0g"]
size = Vector2(49, 42)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wkvf8"]
size = Vector2(77.0001, 37)

[node name="Player" type="Node2D"]
z_index = 3
script = ExtResource("1_gmbs1")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.1, 0.1)
sprite_frames = SubResource("SpriteFrames_rjb5n")
animation = &"walk"

[node name="CollisionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionArea"]
position = Vector2(-0.5, 3)
shape = SubResource("RectangleShape2D_tax0g")

[node name="ShovelingArea" type="Area2D" parent="."]

[node name="ShovelingShape2D" type="CollisionShape2D" parent="ShovelingArea"]
position = Vector2(38.5, 11.5)
shape = SubResource("RectangleShape2D_wkvf8")

[node name="TimerShovel" type="Timer" parent="."]
wait_time = 0.5

[node name="Banana" type="Sprite2D" parent="."]
position = Vector2(12, -28)
scale = Vector2(0.07, 0.07)
texture = ExtResource("3_r1ocp")

[node name="TimerBanana" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="BananaSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_u32a3")
volume_db = -10.0

[connection signal="body_entered" from="CollisionArea" to="." method="_on_collision_area_body_entered"]
[connection signal="body_entered" from="ShovelingArea" to="." method="_on_shoveling_area_body_entered"]
[connection signal="body_exited" from="ShovelingArea" to="." method="_on_shoveling_area_body_exited"]
[connection signal="timeout" from="TimerShovel" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="TimerBanana" to="." method="_on_timer_banana_timeout"]
